# solenoids

./: .gitignore  Cargo.toml
board/: Cargo.toml
board/src/: .periphs.rs.swp  main.rs  periphs.rs  pwm.rs
solenoids/: Cargo.toml
solenoids/src/: .actuators.rs.swp  .lib.rs.swp  .pwm.rs.swp  actuators.rs  controller.rs  lib.rs  pwm.rs
src/: lib.rs  main.rs  sysclock.rs
