[package]
name = "solenoids"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"

[features]
std = []
default = ["std"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
