[package]
name = "solenoids"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"
feather_m0 = { version = "~0.6", features = ["unproven"] }

[features]
std = []
default = ["std"]
